# template

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/x64/debug/: gtest_maind.lib  rttr_core_d.lib  soci_core_4_1.lib  sqlite3.lib
lib/x64/release/: gtest_main.lib  rttr_core.lib  soci_sqlite3_4_1.lib  sqlite3.lib
src/: CMakeLists.txt
src/datas/: CMakeLists.txt  DbManager.cpp  DbManager.h  DbManagerGlobal.h
test/: CMakeLists.txt  SqliteTest.cpp  SqliteTest.h  main.cpp
